--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="card1">
               <div class="card-body">
                 <h1 class="card-title"></h1>
-                <h3 class="card-text">Monday</h3>
+                <h3 class="card-text"></h3>
                 <h4 class="card-text">Sunny</h4>
               </div>
             </div>
