removed class for headings, added lis and open source link

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <input class="search" type="submit" value="Search" /> <br />
             <div class="card1">
               <div class="card-body">
-                <h1 class="card-title"></h1>
-                <h3 class="card-text"></h3>
-                <h4 class="card-text">Sunny</h4>
+                <h1></h1>
+                <h3></h3>
+                <h4>Sunny</h4>
               </div>
             </div>
           </form>
@@ -50,6 +50,11 @@
           <div class="card-body">
             <span class="temp" id="temperature"></span>
             <p class="emoji">🌤</p>
+            <ul>
+              <li>precipitation: 0%</li>
+              <li>Humidity: 72%</li>
+              <li>Wind: 2km/h</li>
+            </ul>
           </div>
         </div>
         <div class="row">
@@ -112,11 +117,14 @@
           </div>
         </div>
       </div>
+      <br />
+      <small>
+        <a href=" https://github.com/Fidelia/SheCodes" target="_blank"
+          >Open-source code
+        </a>
+        by Fidelia Okandze
+      </small>
     </div>
     <script src="src/index.js"></script>
-
-    <br />
-    <br />
-    https://github.com/Fidelia/SheCodes
   </body>
 </html>
