--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
         <div class="card2" style="width: 18rem">
           <div class="card-body">
             <span class="temp" id="temperature"></span>
-            <span id="units">°C|°F</span>
+            <span class="units"
+              >°C|<a href="#" id="fahrenheit-link">°F</a></span
+            >
             <ul>
-              <li id="precipitation">precipitation: 0%</li>
               <li>Humidity: <span id="humidity"></span>%</li>
               <li>Wind: <span id="wind"></span>km/h</li>
             </ul>
