--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
               <div class="card-body">
                 <h1></h1>
                 <h3></h3>
-                <h4>sunny</h4>
-                <p class="emoji">🌤</p>
+                <h4></h4>
+                <img src="" alt="" id="icon" />
               </div>
             </div>
           </form>
