--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         <div class="card2" style="width: 18rem">
           <div class="card-body">
             <span class="temp" id="temperature"></span>
-            <span class="units"
-              >°C|<a href="#" id="fahrenheit-link">°F</a></span
+            <span class="units">
+              <a href="#" id="celcius-link" class="active">°C</a>
+              |<a href="#" id="fahrenheit-link">°F</a></span
             >
             <ul>
               <li>Humidity: <span id="humidity"></span>%</li>
