--- a/index.html
+++ b/index.html
@@ -64,9 +64,14 @@
           <div class="col-2">
             <div class="card">
               <div class="card-body" style="font-size: 15px">
-                26°C <br />
+                26°C 18°C<br />
                 ☀️ <br />
                 Mon
+                <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                  id="mon"
+                />
               </div>
             </div>
           </div>
