all days with new icon

--- a/index.html
+++ b/index.html
@@ -64,62 +64,78 @@
           <div class="col-2">
             <div class="card">
               <div class="card-body" style="font-size: 15px">
-                26°C 18°C<br />
-                ☀️ <br />
-                Mon
+                Mon<br />
                 <img
                   src="http://openweathermap.org/img/wn/10d@2x.png"
                   alt=""
                   id="mon"
                 />
+                26°C 18°C
               </div>
             </div>
           </div>
           <div class="col-2">
             <div class="card">
               <div class="card-body" style="font-size: 15px">
-                26°C <br />
-                ☀️
-                <br />
-                Tue
+                Tue<br />
+                <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                  id="mon"
+                />
+                26°C 18°C
               </div>
             </div>
           </div>
           <div class="col-2">
             <div class="card">
               <div class="card-body" style="font-size: 15px">
-                27°C <br />
-                ☀️
-                <br />
-                Wed
+                Wed<br />
+                <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                  id="mon"
+                />
+                26°C 18°C
               </div>
             </div>
           </div>
           <div class="col-2">
             <div class="card">
               <div class="card-body" style="font-size: 15px">
-                26°C <br />
-                ☀️
-                <br />
-                Thu
+                Thu<br />
+                <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                  id="mon"
+                />
+                26°C 18°C
               </div>
             </div>
           </div>
           <div class="col-2">
             <div class="card">
               <div class="card-body" style="font-size: 15px">
-                28°C <br />
-                ☀️ <br />
-                Fri
+                Fri<br />
+                <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                  id="mon"
+                />
+                26°C 18°C
               </div>
             </div>
           </div>
           <div class="col-2">
             <div class="card">
               <div class="card-body" style="font-size: 15px">
-                27°C <br />
-                ☀️ <br />
-                Sat
+                Sat<br />
+                <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                  id="mon"
+                />
+                26°C 18°C
               </div>
             </div>
           </div>
