temp min and max

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                   alt=""
                   id="mon"
                 />
-                26°C 18°C
+                <span class="temp-max">26°</span>
+                <span class="temp-min">18°</span>
               </div>
             </div>
           </div>
