--- a/index.html
+++ b/index.html
@@ -60,85 +60,9 @@
             </ul>
           </div>
         </div>
-        <div class="row">
-          <div class="col-2">
-            <div class="card">
-              <div class="card-body" style="font-size: 15px">
-                Mon<br />
-                <img
-                  src="http://openweathermap.org/img/wn/10d@2x.png"
-                  alt=""
-                  id="mon"
-                />
-                <span class="temp-max">26°</span>
-                <span class="temp-min">18°</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card">
-              <div class="card-body" style="font-size: 15px">
-                Tue<br />
-                <img
-                  src="http://openweathermap.org/img/wn/10d@2x.png"
-                  alt=""
-                  id="mon"
-                />
-                26°C 18°C
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card">
-              <div class="card-body" style="font-size: 15px">
-                Wed<br />
-                <img
-                  src="http://openweathermap.org/img/wn/10d@2x.png"
-                  alt=""
-                  id="mon"
-                />
-                26°C 18°C
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card">
-              <div class="card-body" style="font-size: 15px">
-                Thu<br />
-                <img
-                  src="http://openweathermap.org/img/wn/10d@2x.png"
-                  alt=""
-                  id="mon"
-                />
-                26°C 18°C
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card">
-              <div class="card-body" style="font-size: 15px">
-                Fri<br />
-                <img
-                  src="http://openweathermap.org/img/wn/10d@2x.png"
-                  alt=""
-                  id="mon"
-                />
-                26°C 18°C
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card">
-              <div class="card-body" style="font-size: 15px">
-                Sat<br />
-                <img
-                  src="http://openweathermap.org/img/wn/10d@2x.png"
-                  alt=""
-                  id="mon"
-                />
-                26°C 18°C
-              </div>
-            </div>
+      <div class="weather-forecast id="forecast"></div>
+      
+        
           </div>
         </div>
       </div>
