--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </ul>
           </div>
         </div>
-      <div class="weather-forecast id="forecast"></div>
+      <div class="weather-forecast" id="forecast"></div>
       
         
           </div>
