--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <div class="card-body">
             <span class="temp" id="temperature"></span>
             <span class="units">
-              <a href="#" id="celcius-link" class="active">°C</a>
-              |<a href="#" id="fahrenheit-link">°F</a></span
+              <a href="#" id="celcius-link" class="celcius">°C</a>
+              |<a href="#" id="fahrenheit-link" class="fahrenheit">°F</a></span
             >
             <ul>
               <li>Humidity: <span id="humidity"></span>%</li>
@@ -61,13 +61,10 @@
           </div>
         </div>
       <div class="weather-forecast" id="forecast"></div>
-      </br>
-      
-        
+  
           </div>
         </div>
       </div>
-      <br />
       <small>
         <a href=" https://github.com/Fidelia/SheCodes" target="_blank"
           >Open-source code
