--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <input class="search" type="submit" value="Search" /> <br />
             <div class="card1">
               <div class="card-body">
-                <h1></h1>
+                <h1>London</h1>
                 <h3></h3>
                 <h4></h4>
                 <img src="" alt="" id="icon" />
