--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <input
               class="city"
               type="text"
-              placeholder="City"
+              placeholder="Location"
               autocomplete="off"
               id="search-text-input"
             />
