--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </head>
   <body>
     <br />
+    <p>6 day weather forecast</p>
     <div class="container">
       <div class="row">
         <div class="col-6">
