open weather map

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   </head>
   <body>
     <br />
-    <p>6 day weather forecast</p>
+    <p>6-day weather forecast via OpenWeather Map</p>
     <div class="container">
       <div class="row">
         <div class="col-6">
           <form id="search-form">
-            <input
+            <input 
               class="city"
               type="text"
               placeholder="Location"
